--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.caching=true
 group=io.ballerina.stdlib
-version=1.11.1-SNAPSHOT
-ballerinaLangVersion=2201.9.0-20240403-114600-ceb51559
+version=1.12.0-SNAPSHOT
+ballerinaLangVersion=2201.9.0-20240405-165800-4b163f78
 
 checkstylePluginVersion=10.12.0
 spotbugsPluginVersion=5.0.14
@@ -20,30 +20,30 @@ stdlibTimeVersion=2.4.0
 stdlibUrlVersion=2.4.0
 
 # Level 02
-stdlibConstraintVersion=1.4.0
-stdlibCryptoVersion=2.5.0
+stdlibConstraintVersion=1.5.0
+stdlibCryptoVersion=2.7.0-20240328-114200-c8cc19f
 stdlibLogVersion=2.9.0
 stdlibOsVersion=1.8.0
 stdlibTaskVersion=2.5.0
 
 # Level 03
-stdlibCacheVersion=3.7.0
+stdlibCacheVersion=3.8.0-20240409-101100-e2d7f4e
 stdlibFileVersion=1.9.0
 stdlibMimeVersion=2.9.0
-stdlibUuidVersion=1.7.0
+stdlibUuidVersion=1.8.0-20240409-104400-2aaa58d
 
 # Level 04
-stdlibAuthVersion=2.10.0
-stdlibJwtVersion=2.10.0
-stdlibOAuth2Version=2.10.0
+stdlibAuthVersion=2.11.0-20240409-124200-655c2d4
+stdlibJwtVersion=2.11.0-20240409-134000-9b5bf2e
+stdlibOAuth2Version=2.11.0-20240409-124200-15a9919
 
 # Level 05
-stdlibHttpVersion=2.10.12
+stdlibHttpVersion=2.11.0-20240409-155700-86d3a0d
 
 # Level 06
-stdlibWebsocketVersion=2.10.0
+stdlibWebsocketVersion=2.11.0-20240409-202400-9d7e032
 
 # Ballerinax Observer
-observeVersion=1.2.0
-observeInternalVersion=1.2.0
+observeVersion=1.2.3-20240408-194900-a0e331f
+observeInternalVersion=1.2.2-20240408-195500-1436319
 
