--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.caching=true
 group=io.ballerina.stdlib
 version=1.13.0-SNAPSHOT
-ballerinaLangVersion=2201.9.0-20240425-195200-d5ce8c72
+ballerinaLangVersion=2201.9.0
 
 checkstylePluginVersion=10.12.0
 spotbugsPluginVersion=5.0.14
