--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.caching=true
 group=io.ballerina.stdlib
-version=1.12.0-SNAPSHOT
-ballerinaLangVersion=2201.9.0-20240502-141200-0a49fa42
+version=1.13.0-SNAPSHOT
+ballerinaLangVersion=2201.9.0
 
 checkstylePluginVersion=10.12.0
 spotbugsPluginVersion=5.0.14
