--- a/ballerina-tests/Ballerina.toml
+++ b/ballerina-tests/Ballerina.toml
@@ -1,5 +1,7 @@
 [package]
 org = "ballerina"
 name = "graphql_tests"
-version = "1.12.0"
+version = "1.13.0"
 
+[build-options]
+observabilityIncluded = true
