--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.caching=true
 group=io.ballerina.stdlib
-version=1.13.2-SNAPSHOT
-ballerinaLangVersion=2201.9.0
+version=1.14.0-SNAPSHOT
+ballerinaLangVersion=2201.10.0-20240702-135600-18965cba
 
 checkstylePluginVersion=10.12.0
 spotbugsPluginVersion=5.0.14
