--- a/.github/workflows/trigger-load-tests.yml
+++ b/.github/workflows/trigger-load-tests.yml
@@ -22,7 +22,7 @@ jobs:
     call_stdlib_trigger_load_test_workflow:
         name: Run StdLib Load Test Workflow
         if: ${{ github.event_name != 'schedule' || (github.event_name == 'schedule' && github.repository_owner == 'ballerina-platform') }}
-        uses: ballerina-platform/ballerina-library/.github/workflows/trigger-load-tests-template.yml@main
+        uses: ballerina-platform/ballerina-library/.github/workflows/trigger-load-tests-template.yml@java21
         with:
             repo_name: 'module-ballerina-graphql'
             runtime_artifacts_url: 'https://api.github.com/repos/ballerina-platform/module-ballerina-graphql/actions/artifacts'
