--- a/examples/build.gradle
+++ b/examples/build.gradle
@@ -23,7 +23,8 @@ apply plugin: 'java'
 description = 'Ballerina - GraphQL Compiler Plugin Tests'
 
 def ballerinaDist = "${project.rootDir}/target/ballerina-runtime"
-def examples = ["snowtooth", "starwars", "news_alerts"]
+//def examples = ["snowtooth", "starwars", "news_alerts"]
+def examples = ["snowtooth", "news_alerts"]
 def graalvmFlag = ""
 
 dependencies {
