--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
 org.gradle.caching=true
 group=io.ballerina.stdlib
 version=1.14.1-SNAPSHOT
-ballerinaLangVersion=2201.10.0
+ballerinaLangVersion=2201.10.0-20241025-103700-5c9e6a27
 
 checkstylePluginVersion=10.12.0
-spotbugsPluginVersion=5.0.14
+spotbugsPluginVersion=6.0.18
 shadowJarPluginVersion=8.1.1
 downloadPluginVersion=5.4.0
 releasePluginVersion=2.8.0
@@ -15,34 +15,34 @@ jacocoVersion=0.8.10
 
 # Ballerina Library Dependencies
 # Level 01
-stdlibIoVersion=1.6.1
-stdlibTimeVersion=2.4.0
-stdlibUrlVersion=2.4.0
+stdlibIoVersion=1.6.2-20240928-084100-656404f
+stdlibTimeVersion=2.5.1-20240930-120200-e59222b
+stdlibUrlVersion=2.4.1-20240930-120200-b7fb9e1
 
 # Level 02
-stdlibConstraintVersion=1.5.0
-stdlibCryptoVersion=2.7.2
-stdlibLogVersion=2.10.0
-stdlibOsVersion=1.8.0
-stdlibTaskVersion=2.5.0
+stdlibConstraintVersion=1.5.1-20240930-123400-5ecd396
+stdlibCryptoVersion=2.7.3-20240930-132000-5ecc9ab
+stdlibLogVersion=2.10.1-20240930-154200-5ab2aa4
+stdlibOsVersion=1.8.1-20241001-120600-dd1626e
+stdlibTaskVersion=2.5.1-20241002-145700-5bdb843
 
 # Level 03
-stdlibCacheVersion=3.8.0
-stdlibFileVersion=1.10.0
-stdlibMimeVersion=2.10.0
-stdlibUuidVersion=1.8.0
+stdlibCacheVersion=3.8.1-20241007-154900-63f4403
+stdlibFileVersion=1.10.1-20241007-160900-03f7b64
+stdlibMimeVersion=2.10.1-20241009-141200-8b6c9f0
+stdlibUuidVersion=1.8.1-20241009-134600-a05012b
 
 # Level 04
-stdlibAuthVersion=2.12.0
-stdlibJwtVersion=2.13.0
-stdlibOAuth2Version=2.12.0
+stdlibAuthVersion=2.12.1-20241010-130800-733dbef
+stdlibJwtVersion=2.13.1-20241010-123600-5ea6a94
+stdlibOAuth2Version=2.12.1-20241029-084800-d7ba9e5
 
 # Level 05
-stdlibHttpVersion=2.12.0
+stdlibHttpVersion=2.13.0-20241029-110700-30ed05b
 
 # Level 06
-stdlibWebsocketVersion=2.12.0
+stdlibWebsocketVersion=2.12.1-20241104-132000-aba9ccb
 
 # Ballerinax Observer
-observeVersion=1.3.0
-observeInternalVersion=1.3.0
+observeVersion=1.3.1-20241007-161000-645452d
+observeInternalVersion=1.3.1-20241015-172900-cdc3cb3
